[workspace]
resolver = "2"
members = [
    "crates/orpheon-core",
    "crates/orpheon-planner",
    "crates/orpheon-state",
    "crates/orpheon-negotiate",
    "crates/orpheon-node",
    "crates/orpheon-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orpheon-protocol/core"
authors = ["Orpheon Protocol Contributors"]
description = "The Intent-Native Interaction Standard for Autonomous Systems"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Types
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Internal crates
orpheon-core = { path = "crates/orpheon-core" }
orpheon-planner = { path = "crates/orpheon-planner" }
orpheon-state = { path = "crates/orpheon-state" }
orpheon-negotiate = { path = "crates/orpheon-negotiate" }
orpheon-node = { path = "crates/orpheon-node" }
orpheon-sdk = { path = "crates/orpheon-sdk" }
