[package]
name = "orpheon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core primitives and types for the Orpheon Protocol"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
