[package]
name = "orpheon-negotiate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket-based negotiation protocol for the Orpheon Protocol"

[dependencies]
orpheon-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
